# cc-goto-work

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh  settings.example.json
.github/workflows/: release.yml
npm/: README.md  package.json
src/: main.rs
