[package]
name = "cc-goto-work"
version = "0.1.0"
edition = "2021"
description = "Claude Code hook to detect RESOURCE_EXHAUSTED stop events and continue working"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs-next = "2.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
