[package]
name = "cc-goto-work"
version = "0.8.1"
edition = "2021"
description = "Claude Code hook to detect RESOURCE_EXHAUSTED stop events and continue working"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs-next = "2.0"
tokio = { version = "1.0", features = ["rt", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.0", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
